--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
         }
         nav{
             grid-column: 1/7;
-            background-color: #fffc51;
+            background-color: #B9F3FF;
         }
         header{
             grid-column: 1/7;
-            background-color: #8ef7ff;
+            background-color: #FFD1D1;
         }
         main{
             grid-column: 1/6;
-            background-color: #96ffb9;
+            background-color: #FFF094;
         }
         aside{
             grid-column: 6/7;
-            background-color: #ffb52d;
+            background-color: #BDFF94;
         }
         footer{
             grid-column: 1/7;
-            background-color: #ffa7f2;
+            background-color: #C0B8FF;
         }
         /*IPAD*/
         @media only screen and (max-width: 832px) {
@@ -54,7 +54,7 @@
                 grid-template-rows: 10% 30% 40% 10% 20%;
             }
             main {
-                background-color: rgb(194, 225, 255);
+                background-color: #E6B5EA;
             }
         }
     </style>
